# Constitution-RAG

./: .env  document_processor.py  main.py  pre.py  pyproject.toml  requirements.txt  retriever.py  streamlit_app.py
app/: citation_generator.py  generator.py  pdf_to_json.py  pre_processor.py  preprocessor.py  query_rewriter.py  retriever.py
backend/: .env.example  config.py  generator.py  preprocessor.py  query_rewriter.py  retriever.py
data/extracted-jsons/: Constitution-1973.json
frontend/: streamlit_app.py
pakistan_constitution_db/: chroma.sqlite3
scripts/: ingest.py
