[project]
name = "constitution-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-ollama",
    "pymupdf",
    "chromadb",
    "langchain-chroma<=0.2.4",
]
