[project]
name = "constitution-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-ollama",
    "chromadb",
    "langchain-chroma<=0.2.4",
    "ollama>=0.5.1",
    "python-dotenv>=1.1.1",
    "docling>=2.39.0",
    "pdfplumber>=0.11.7",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
    "rank-bm25>=0.2.2",
    "flashrank>=0.2.10",
]
